# gzgz_rules_sass

./: .gitattributes  .gitignore  CONTRIBUTING.md  MODULE.bazel  README.md
.bcr/: metadata.template.json  source.template.json
.github/workflows/: BUILD.bazel  buildifier.yaml  ci.yaml  release.yml  release_prep.sh
docs/: BUILD.bazel  rules.md
e2e/smoke/: .bazelignore  BUILD  MODULE.bazel  README.md  WORKSPACE.bazel
e2e/smoke/demo/: BUILD.bazel  _styles.scss
e2e/smoke/demo/app/: app.component.scss
e2e/smoke/demo/app/widget/: widget.component.scss
e2e/smoke/hello_world/: BUILD  main.scss
e2e/smoke/imports_css/: BUILD  _other.css  main.scss
e2e/smoke/nested/: BUILD
e2e/smoke/shared/: BUILD
e2e/smoke/submodule/: BUILD  MODULE.bazel  WORKSPACE.bazel
e2e/smoke/submodule/nested/: BUILD
e2e/smoke/submodule/nested/dir/: main.scss
e2e/smoke/submodule/shared/: BUILD
sass/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
sass/private/: BUILD.bazel  genhash.sh  genversions.py  mkversions.sh  resolved_toolchain.bzl  toolchains_repo.bzl  versions.bzl  versions.json  versions.py
sass/tests/: versions_test.bzl
