bazel_dep(name = "gzgz_rules_sass", version = "1.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.3.0", dev_dependency = True)

local_path_override(
    module_name = "gzgz_rules_sass",
    path = "../..",
)

sass = use_extension("@gzgz_rules_sass//sass:extensions.bzl", "sass")
sass.toolchain(sass_version = "1.86.3")
use_repo(sass, "sass_toolchains")

register_toolchains("@sass_toolchains//:all")
