# Override http_archive for local testing
local_repository(
    name = "gzgz_rules_sass",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# gzgz_rules_sass setup #
######################
# Fetches the dependencies for gzgz_rules_sass.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@gzgz_rules_sass//sass:repositories.bzl", "gzgz_rules_sass_dependencies", "sass_register_toolchains")

gzgz_rules_sass_dependencies()

sass_register_toolchains(
    name = "dart_sass",
    sass_version = "1.86.3",  # Or any other version you like
)
