# Override http_archive for local testing
local_repository(
    name = "gzgz_rules_sass",
    path = "../../..",
)

load("@gzgz_rules_sass//sass:repositories.bzl", "gzgz_rules_sass_dependencies", "sass_register_toolchains")

gzgz_rules_sass_dependencies()

sass_register_toolchains(
    name = "dart_sass",
    sass_version = "1.86.3",  # Or any other version you like
)
